@@ -574,6 +574,7 @@ class contentengine(object):
 
 
 
+
         if KODI:
             #global variables
             self.PLUGIN_URL = sys.argv[0]
@@ -581,7 +582,6 @@ class contentengine(object):
             plugin_queries = settings.parse_query(sys.argv[2][1:])
 
         else:
-            self.PLUGIN_URL = 'default.py'
             self.plugin_handle = writer
             plugin_queries = ''
 
@@ -591,15 +591,22 @@ class contentengine(object):
 
         self.debugger()
 
-
         # cloudservice - create settings module
         settings = settings.settings(addon)
+
+        if not KODI:
+            protocol = settings.getSetting('protocol', 'http://')
+            hostname = settings.getSetting('hostname', 'localhost')
+            port = settings.getSetting('port', '9988')
+            self.PLUGIN_URL = str(protocol) + str(hostname) + ':' + str(port)  + '/' +  'default.py'
+
 
         # retrieve settings
         user_agent = settings.getSetting('user_agent')
         #obsolete, replace, revents audio from streaming
         #if user_agent == 'Mozilla/4.0 (compatible; MSIE 5.5; Windows NT)':
         #    addon.setSetting('user_agent', 'Mozilla/5.0 (Windows; U; Windows NT 6.1; en-US) AppleWebKit/532.0 (KHTML, like Gecko) Chrome/3.0.195.38 Safari/532.0')
+
 
 
 
@@ -679,6 +686,18 @@ class contentengine(object):
 
                         filename = path + '/' + title+'.strm'
                         strmFile = xbmcvfs.File(filename, "w")
+
+                        if not KODI:
+                            if plugin_handle.server.keyvalue or plugin_handle.server.hide:
+                                params = re.search(r'^([^\?]+)\?([^\?]+)$', str(url))
+
+                                if params and plugin_handle.server.hide:
+                                    base = str(params.group(1))
+                                    extended = str(params.group(1))
+                                    url = str(base) + '?kv=' +plugin_handle.server.encrypt.encryptString(url)
+                                else:
+                                    url = str(url) + '&kv=' +plugin_handle.server.encrypt.encryptString(url)
+
 
                         strmFile.write(url+'\n')
                         strmFile.close()
