@@ -49,7 +49,7 @@ class addDirectoryItem(object):
         label = label.replace("<",'(')
         label = label.replace(">",')')
 
-        if plugin_handle.server.keyvalue or plugin_handle.server.hide:
+        if (plugin_handle.server.keyvalue or plugin_handle.server.hide) and plugin_handle.server.encrypt is not None:
             params = re.search(r'^([^\?]+)\?([^\?]+)$', str(url))
 
             if params and plugin_handle.server.hide:
