@@ -1,3 +1,4 @@
+- fixup settings pane "autocomplete"ing the fields
 - hide settings that only pertain to kodi
 - enable settings
 - implemented: configuring your plugin settings #13
